Add the text : Baptême ligérien

--- a/main.lyx
+++ b/main.lyx
@@ -67,6 +67,10 @@
 
 \begin_body
 
+\begin_layout Chapter*
+Chapitre 1
+\end_layout
+
 \begin_layout Section*
 Traversée de l'Ardèche
 \end_layout
@@ -467,8 +471,8 @@ Vivre dans de coin d'Ardèche
 En parcourant les sucs ardéchois, autour du mont Gerbier\SpecialChar \nobreakdash-
 de\SpecialChar \nobreakdash-
 Jonc, nous avons
- croisé beaucoup de belles maisons – souvent de vieilles fermes – aux volets
- tous clos, qui ne semblaient pourtant pas abandonnées.
+ croisé beaucoup de belles maisons -- souvent de vieilles fermes -- aux
+ volets tous clos, qui ne semblaient pourtant pas abandonnées.
  Ce sont des demeures secondaires où la vie règne, au mieux, 4
 \begin_inset space ~
 \end_inset
@@ -539,6 +543,489 @@ h.
 \begin_layout Standard
 Je n'ai pas grimpé le « Gerbier ».
  Et même si je n'y retournerais probablement jamais, c'est sans regret !
+\end_layout
+
+\begin_layout Chapter*
+Chapitre 2
+\end_layout
+
+\begin_layout Section*
+Baptême ligérien
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Mercredi
+\begin_inset space ~
+\end_inset
+
+13
+\begin_inset space ~
+\end_inset
+
+avril
+\begin_inset space ~
+\end_inset
+
+2011.
+\shape smallcaps
+\emph default
+
+\begin_inset Newline newline
+\end_inset
+
+
+\shape default
+Premiers coups de pagaies ; premières sensations.
+ Et second départ qui devrait nous mener de Retournac à Lavau\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loire
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Toute petite ville de l'estuaire ligérien, située à 20
+\begin_inset space ~
+\end_inset
+
+kilomètres environ de Saint\SpecialChar \nobreakdash-
+Nazaire.
+\end_layout
+
+\end_inset
+
+.
+ Nous kayakerons pour 900
+\begin_inset space ~
+\end_inset
+
+kilomètres, bob sur la tête et manches retroussées.
+ Bon vent et bonne vague !
+\shape smallcaps
+ 
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Mercredi
+\begin_inset space ~
+\end_inset
+
+27
+\begin_inset space ~
+\end_inset
+
+avril
+\begin_inset space ~
+\end_inset
+
+2011.
+\emph default
+
+\begin_inset Newline newline
+\end_inset
+
+Deux semaines déjà.
+ À pagayer, sans surprise.
+ Mais beaucoup, aussi, à pousser, tirer, lever, rouler ; les pieds dans
+ l'eau trop souvent, le cul mouillé parfois.
+ Et nous galérons, merde de merde, maudissant cette Loire.
+ En ce début d'année, mes amis : pas de neige, pas de pluie.
+ Alors, pas d'eau non plus.
+ Et une Loire tristement basse, comme en un sec été.
+ Ça commence mal, pour nous qui nous attendions à une Loire plus haute,
+ plus fleuve.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Avant d'aller plus loin, laissez-moi vous préciser...
+\begin_inset Newline newline
+\end_inset
+
+Nous naviguons -- Marie, moi et notre barda -- sur un kayak pliant
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+À ne pas confondre avec un kayak gonflable.
+\end_layout
+
+\end_inset
+
+, de manufacture polonaise
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Un 
+\begin_inset Quotes fld
+\end_inset
+
+Amazon II Expedition
+\begin_inset Quotes frd
+\end_inset
+
+ du constructeur Wayland.
+\end_layout
+
+\end_inset
+
+.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Qu'est-ce qu'un kayak pliant ?
+\begin_inset Quotes frd
+\end_inset
+
+ me demanderez-vous.
+ Un kayak est une embarcation à propulsion humaine -- principalement
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+On peut lui adjoindre une voile ; et même un (petit) moteur.
+\end_layout
+
+\end_inset
+
+ --, assez plate, dans laquelle on se tient à fleur d'eau et que l'on manie
+ -- généralement -- à la pagaie double
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Contrairement à un canoë qui est : plus large, plus haut, dans lequel on
+ se tient haut, et que l'on manie généralement à la pagaie simple.
+\end_layout
+
+\end_inset
+
+.
+ Le concept du kayak pliant est allemand et est apparu durant 
+\begin_inset Quotes fld
+\end_inset
+
+l'entre deux guerres
+\begin_inset Quotes frd
+\end_inset
+
+, avec les embarcations de la marque Keppler.
+ Une telle embarcation est constituée d'une armature démontable (originellement
+ et souvent, en bois costaud et imputrescible ; mais aussi en aluminium,
+ plus léger) et d'une enveloppe dont le fond est -- évidemment -- en matière
+ très résistante (PVC, Hypalon...).
+ Il peut être agrémenté d'un tas d'accessoires, souvent utiles : boudins
+ d'air comme réserves de flottabilité, poignées de portage, renforts sur
+ le fond de l'enveloppe, ligne de vie, divers poches, etc.
+\end_layout
+
+\begin_layout Standard
+Le nôtre, de kayak pliant, est taillé pour l'expédition, pèse 38
+\begin_inset space ~
+\end_inset
+
+kilos à jeun et est joli comme un cœur.
+ Il est accompagné d'un indispensable chariot de portage, aidant nos bras
+ et nos jambes à passer des structures non franchissables par navigation
+ (barrages, hauts fonds et diverses structures humaines).
+ Son petit nom est 
+\emph on
+Louizanne
+\emph default
+, contraction de Louisette et Suzanne, blases de feu nos solides grand-mères.
+ Comme elles, notre 
+\emph on
+Louizanne
+\emph default
+ a du caractère et semble solide comme un roc.
+ Comme elles aussi, il a pourtant ses faiblesses et une certaine fragilité
+ -- sa peau, son armature -- le rendant largement vulnérable à certains
+ environnements.
+ Cette dernière précision est fondamentale ; elle est la raison des plus
+ grands de nos stress et préoccupations.
+ La voilà faite, nous pouvons alors poursuivre.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Nous partîmes par un bel après-midi, la fleur en bout de pagaie, prêts à
+ en découdre.
+ Et nous nous arrêtâmes, trois heures et à peine cinq kilomètres plus tard,
+ les têtes vidées du trop plein d'attention mobilisée.
+ Première journée, qui fût notre 
+\begin_inset Quotes fld
+\end_inset
+
+premier feu
+\begin_inset Quotes frd
+\end_inset
+
+.
+ En trois heures, nous eûmes une jolie 
+\begin_inset Quotes fld
+\end_inset
+
+totale
+\begin_inset Quotes frd
+\end_inset
+
+ (deux portages délicats, des remous plus que sérieux et des rochers peu
+ fréquentables) qui nous apprit, à marche forcée, la navigation en eaux
+ vives.
+ Jusqu'alors totalement dévouées à notre coque de bois, nos têtes purent
+ enfin -- après s'être réchauffées sous un chaud bonnet -- se laisser aller
+ à la lassitude, contemplant quelques milans noirs nous toisant de bien
+ haut.
+\end_layout
+
+\begin_layout Standard
+Telle fut la première journée d'une navigation qui devait en compter --
+ encore -- une cinquantaine.
+ Puis vinrent les deux suivantes : égales.
+ L'attention étirée -- de bout en bout de la journée -- à son maximum :
+ apprendre à lire les remous ; repérer les rochers dangereux ; la pagaie
+ à gauche, à droite, en avant, en arrière ; sauter les deux pieds dans l'eau
+ caillouteuse, poussant et tirant le kayak, gueulant parfois ; pour enfin
+ constater les dégâts, barres en bois fracassées et entailles dans sa peau.
+ Que la journée s'arrête ! Ouf, mais transis de froid.
+ En trois jours, nous aurons pagayé 13
+\begin_inset space ~
+\end_inset
+
+heures et parcouru 35
+\begin_inset space ~
+\end_inset
+
+kilomètres, de Retournac à Aurec\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loire.
+ Cela semble peu ; mais nous savons, nous, que ça n'est pas si mal.
+\end_layout
+
+\begin_layout Standard
+Relativisons cette torture, tout de même.
+ Car nous y aurons pris -- dans ces gorges de Haute\SpecialChar \nobreakdash-
+Loire -- notre pied !
+ La navigation était sportive et chouette ; les paysages sauvages et magnifiques
+ ; et la faune commençait à se montrer à nous.
+\end_layout
+
+\begin_layout Standard
+Les jours suivants continuèrent largement notre formation -- d'aventuriers
+ -- et balayèrent amplement deux croyances : une populaire et une personnelle.
+\end_layout
+
+\begin_layout Standard
+La populaire est celle qui fait dire et écrire que la Loire serait le dernier
+ fleuve sauvage d'Europe.
+ Sauf de discuter interminablement sur le sens du mot 
+\begin_inset Quotes fld
+\end_inset
+
+sauvage
+\begin_inset Quotes frd
+\end_inset
+
+, ce voyage a -- à de nombreuses reprises et sous des angles de vues divers
+ -- balayé de nos têtes cette croyance.
+ Certes, la Loire est un fleuve magnifique à bien des égards.
+ Et en bien des endroits, elle y paraît sauvage, et on s'y sent allègrement
+ solitaire.
+\begin_inset Newline newline
+\end_inset
+
+Mais, face à deux gigantesques barrages, véritables murs de bétons : qui,
+ en quelques pas, transforment un 
+\begin_inset Quotes fld
+\end_inset
+
+fleuve
+\begin_inset space ~
+\end_inset
+
+lac
+\begin_inset Quotes frd
+\end_inset
+
+ en une 
+\begin_inset Quotes fld
+\end_inset
+
+rivière
+\begin_inset space ~
+\end_inset
+
+rikiki
+\begin_inset Quotes frd
+\end_inset
+
+ ; qui créent de belles zones de plaisances humaines ; qui modulent une
+ navigation à coups de lâchés d'eau
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+La faisait passer d'un état 
+\begin_inset Quotes fld
+\end_inset
+
+pieds dans l'eau à tirer le kayak
+\begin_inset Quotes frd
+\end_inset
+
+, à un état 
+\begin_inset Quotes fld
+\end_inset
+
+au taquet, la pagaie en main et les yeux rivés sur les remous
+\begin_inset Quotes frd
+\end_inset
+
+.
+\end_layout
+
+\end_inset
+
+...
+\begin_inset Newline newline
+\end_inset
+
+Mais, lorsqu'à chaque instant, en chaque endroit (même les plus reculés),
+ la présence humaine se fait sentir -- de manières utiles parfois et souvent
+ nauséabondes -- modelant le fleuve et ses rives : les nombreux ponts, et
+ les blocs en vrac à leurs pieds ; les chemins de fer discrets ; les routes
+ petites et calmes, ou grandes et bruyantes ; les fils électriques et leurs
+ pilonnes, passant d'un bout à l'autre de tout panorama ; les jolis villages,
+ anciens ou plus neufs ; quelques châteaux posés de manière ahurissante,
+ pour raisons stratégiques ; de trop nombreuses maisons plantées au beau
+ milieu d'un magnifique n'importe où, qui n'ont rien à y foutre ! ; et puis,
+ invariablement, les déchets de l'homme !
+\begin_inset Newline newline
+\end_inset
+
+Mais, non ! La Loire n'est pas un fleuve sauvage.
+ Elle est le serf et la poubelle de l'humain.
+\end_layout
+
+\begin_layout Standard
+La croyance individuelle, que ce périple a largement lessivé, est la suivante.
+ De la Loire, Marie et moi ne connaissions que l'estuaire et l'embouchure,
+ près desquels nous avons fait pousser nos vingts premières années.
+ Tout au plus, nous l'avions aperçu en quelques autres endroits -- de villes
+ ou de châteaux -- où elle était, probablement, déjà bien large.
+ Bien entendu, nous avions préparé ce voyage et savions -- tout de même
+ -- dans quelle bassine d'eau nous mettions les pieds.
+ Nous pensions -- pourtant et naïvement -- n'avoir que trois jours de Loire
+ sportive, puis qu'elle deviendrait paisiblement navigable, ne nous réveillant
+ que pour quelques difficultés très ponctuelles.
+ Et à chaque passage délicat, nous nous disions que 
+\begin_inset Quotes fld
+\end_inset
+
+courage, bientôt nous aurions la Loire navigable, la vraie Loire
+\begin_inset Quotes frd
+\end_inset
+
+, négligeant souvent ces passages.
+\end_layout
+
+\begin_layout Standard
+Mais elle s'est montrée à nous, franche.
+ Et force a été de la découvrir -- après quelques jours -- le cul dans l'eau,
+ une main agrippée à un kayak sévèrement endommagé, prenant pleinement conscienc
+e que, oui, c'était aussi cette Loire là que nous étions venu chercher.
+ Nous nous sommes détendus, nous avons porté une plus forte et une plus
+ sereine attention à notre embarcation.
+ Et alors, doucement, nous avons pris, avec plaisir, tous les emmerdes que
+ la Loire nous apportait sur son lit scintillant : embâcles de rochers ou
+ d'arbres -- petits à gros -- et leurs remous -- gros à petits -- ; nombreuses
+ et larges gravières et sablières ; tapis de renoncules envahissantes ;
+ et autres merdes humaines.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Autant ne pas vous dire que ces quinze jours auront été remplis, à en déborder
+ : de stress, de fatigue, d'émotions, de tranquillité, de sport, de paysages,
+ de couchés de soleil, de sueurs chaudes et froides, d'emmerdes, et puis
+ tout le reste.
+\end_layout
+
+\begin_layout Standard
+Tout le reste, il faut aussi en parler et l'écrire.
+ Ce sont les longues journées à tirer un kayak, dans les cinq centimètres
+ d'eau, du plus long fleuve de France ! C'est l'unique orage, le seul jour
+ de pluie, d'un mois de baroude d'avril.
+ C'est la multitude de piafs majestueux, que nous avons observé et écouté,
+ avec un énorme plaisir.
+ C'est la flore, aussi, que nous avons étudié, avec un sérieux scientifique.
+\end_layout
+
+\begin_layout Standard
+Les premiers quinze jours de navigation ligérienne sont terminés, aboutissant,
+ après le passage du barrage de Villerest, puis de la ville de Roanne
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Samedi
+\begin_inset space ~
+\end_inset
+
+23 et dimanche
+\begin_inset space ~
+\end_inset
+
+24
+\begin_inset space ~
+\end_inset
+
+avril
+\begin_inset space ~
+\end_inset
+
+2011.
+\end_layout
+
+\end_inset
+
+, à des étendues infinies, sableuses et arborées
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Où paissent paisiblement, les fameuses et goûtues vaches charolaises.
+\end_layout
+
+\end_inset
+
+.
+ Nous voilà à Digoin, pour un repos et un décrassage bien mérités.
+ Maintenant, la suite.
 \end_layout
 
 \end_body
