Add the text : Deux mondes

--- a/main.lyx
+++ b/main.lyx
@@ -1028,5 +1028,49 @@ Où paissent paisiblement, les fameuses et goûtues vaches charolaises.
  Maintenant, la suite.
 \end_layout
 
+\begin_layout Section*
+Deux mondes
+\end_layout
+
+\begin_layout Standard
+Cela fait deux semaines que nous bivouaquons; nous dormons sous une tente
+ ; et nos repas sont certes équilibrés, mais manquent de diversité.
+ Toutefois, nous nous sentons bien à vivre dans ce petit confort, nous y
+ sommes à notre aise et y prenons du plaisir.
+\end_layout
+
+\begin_layout Standard
+Ce midi, un homme généreux, rencontré le matin même, nous a invité au restaurant
+ ; un chic, où les petits plats sont mis dans les grands.
+ Le contraste, entre ce repas et nos vies de voyageurs, a été fort.
+ Passer de la plâtrée de riz avec saucisson, à la farandole de hors-d’œuvres,
+ paraît hallucinant ! Nos tenues, aussi, étaient surprenantes dans un tel
+ établissement, où les serveurs et serveuses sont vêtus d'ensembles noirs
+ et blancs immaculés.
+ Je me suis régalée, mais ne me suis pas sentie à l'aise.
+ Pour moi, le repas est un moment convivial qui se transforme, ici, en un
+ moment protocolaire : seul le « chef de table » a les prix ; le pain est
+ servi au compte goutte ; les noms des plats et les manières des serveurs
+ sont alambiqués...
+\end_layout
+
+\begin_layout Standard
+Depuis le début de ce voyage, je m'ouvre d'avantage aux sensations : mon
+ corps qui travaille, la faim, la soif...
+ Tout est exacerbé, bonheurs comme malheurs.
+ Que je me se sens vivante ! Mais, lors de ce repas, j'ai cru assister à
+ une comédie ; les gens jouaient des rôles.
+ Après tout, cette comédie est souvent quotidienne : au travail, entre amis,
+ en famille, etc.
+ Et nous dévoilons rarement notre nature profonde.
+ La société que nous construisons se veut, elle aussi, protocolaire et impersonn
+elle.
+\end_layout
+
+\begin_layout Standard
+Qu'il est dommage, alors, de devoir partir en pleine nature pour retrouver
+ ce naturel perdu.
+\end_layout
+
 \end_body
 \end_document
