Add the text : Contrastes de Loire

--- a/main.lyx
+++ b/main.lyx
@@ -1072,5 +1072,417 @@ Qu'il est dommage, alors, de devoir partir en pleine nature pour retrouver
  ce naturel perdu.
 \end_layout
 
+\begin_layout Chapter*
+Chapite 3
+\end_layout
+
+\begin_layout Section*
+Contrastes de Loire
+\end_layout
+
+\begin_layout Standard
+Digoin et son pont-canal sont derrière nous, depuis trois bons jours.
+ Hier, c'est la ville de Decize que nous avons passée – après une pression
+ fraîche et un petit portage très chiant – en compagnie d'un kayakiste en
+ vacances, descendant la Loire jusqu'à Orléans.
+ Nous nous sommes suivis : nous, lourds comme un sac à patates, le kayak
+ bourré de victuailles, zigzaguant péniblement ; lui, léger sur son blanc
+ esquif
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Un très joli et sobre kayak de mer, construit de ses mains, il y a 15
+\begin_inset space ~
+\end_inset
+
+ans de ça !
+\end_layout
+
+\end_inset
+
+, filant droit, face à un soleil couchant luisant vif sur la Loire.
+ Collant nos tentes pour un bivouac commun sur une haute falaise sableuse,
+ nous avons papoté de : nos projets, nos impressions, nos expériences...
+\end_layout
+
+\begin_layout Standard
+Aujourd'hui, en ce dimanche premier mai, le voilà parti de bonne heure,
+ sans bruit faisant.
+ Le reverrons-nous ? Un peu trop fidèles à nous-mêmes, nous nous réveillons
+ encore tard, occupant cette fête du travail à notre manière : lecture,
+ écriture, photographie, méditation et câlins.
+ Ne nous attendent, aujourd'hui, que 30
+\begin_inset space ~
+\end_inset
+
+kilomètres : nous pouvons tout nous permettre.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\emph on
+Jeudi
+\begin_inset space ~
+\end_inset
+
+5
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011.
+\emph default
+
+\begin_inset Newline newline
+\end_inset
+
+Réveil un peu frais, mais pas trop.
+ Effectivement, il est 9
+\begin_inset space ~
+\end_inset
+
+heures.
+ L'astre jaune ne nous a pas attendu pour se lever, réchauffant les cœurs
+ et le paysage.
+ Cela fait 33
+\begin_inset space ~
+\end_inset
+
+jours – docteur – que nous petit-déjeunons sous un soleil déjà bien haut.
+ Aucune aurore dans nos têtes ; cela commence à être problématique pour
+ le moral (impression d'être deux bons à rien, gâchant le temps).
+ Mais nous en reparlerons plus tard, probablement.
+ Aujourd'hui, c'est aujourd'hui.
+ Ne nous lamentons pas.
+ Le ciel est clair ; le mois passé a été une merveille ; ceux à venir s'annoncen
+t égaux.
+ Marie bouquine, moi j'écris, à quelques pas en amont de notre première
+ centrale nucléaire
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Centrale nucléaire de Belleville.
+\end_layout
+
+\end_inset
+
+.
+ Nous la passerons dans l'après-midi – tranquillement – savourant cette
+ journée de repos.
+ Puis dimanche, Orléans la pucelle pointera les faubourgs de son nez.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Le temps file ; le trait sur la carte avance bien, mine de rien.
+\begin_inset Newline newline
+\end_inset
+
+À notre quinzième jour de navigation, nous avions vu défiler – au total
+ – 185
+\begin_inset space ~
+\end_inset
+
+kilomètres de Loire
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+De Retournac à Digoin ; du mercredi
+\begin_inset space ~
+\end_inset
+
+13 au mercredi
+\begin_inset space ~
+\end_inset
+
+27
+\begin_inset space ~
+\end_inset
+
+avril
+\begin_inset space ~
+\end_inset
+
+2011.
+\end_layout
+
+\end_inset
+
+.
+ Les 185
+\begin_inset space ~
+\end_inset
+
+suivants ont été avalés, eux, en une petite semaine
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+De Digoin à 5
+\begin_inset space ~
+\end_inset
+
+km après Cosnes\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loire ; du jeudi
+\begin_inset space ~
+\end_inset
+
+28
+\begin_inset space ~
+\end_inset
+
+avril au mercredi
+\begin_inset space ~
+\end_inset
+
+4
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011.
+\end_layout
+
+\end_inset
+
+.
+ Période d'essai terminée, rendements doublés ! Logique, non ? Très logique.
+ Car cette 
+\begin_inset Quotes fld
+\end_inset
+
+période d'essai
+\begin_inset Quotes frd
+\end_inset
+
+ (10
+\begin_inset space ~
+\end_inset
+
+jours de marche et 2
+\begin_inset space ~
+\end_inset
+
+semaines de kayak) nous a mis à rude épreuve : sportivement, mentalement
+ et logistiquement.
+ Par ses difficultés, elle a été probablement la plus propice à l'abandon.
+ Nous l'avons passée ; non sans mal !
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Entre hier et aujourd'hui, les situations sont bien différentes...
+ ou presque.
+\end_layout
+
+\begin_layout Standard
+Nous peinions à porter deux lourds sacs à dos et trop 
+\begin_inset Quotes fld
+\end_inset
+
+d'inutiles
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Aujourd'hui, notre solide kayak porte pour nous toutes ces mêmes affaires,
+ qui ont finalement trouvé leur pleine utilité.
+ Seuls hics : quelques barrages, seuils, ponts, que nous devons franchir
+ en portant notre 
+\begin_inset Quotes fld
+\end_inset
+
+âne porteur
+\begin_inset Quotes frd
+\end_inset
+
+ et ses bagages.
+\end_layout
+
+\begin_layout Standard
+Nous avions, durant de longues journées, les têtes exclusivement dédiées
+ aux remous, aux rochers et à la fatigue.
+ Aujourd'hui, au fil d'une eau calme et de longs silences, nous laissons
+ nos esprits divaguer à la rêverie, à la contemplation.
+ Seul hic : 
+\begin_inset Quotes fld
+\end_inset
+
+Ouch ! Et merde, un banc de sable.
+ Quels cons !
+\begin_inset Quotes frd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Nous étions cocasses à mugir et à piétiner dans cinq centimètres d'eau,
+ tirant notre kayak sur de grandes plaques rocheuses verdâtres et parcourant,
+ en trois heures, quatre kilomètres et demi.
+ Aujourd'hui, en trois mêmes heures, nous avalons une vingtaine de kilomètres
+ et plus.
+ Et cette fois-ci, pas de hic.
+\shape smallcaps
+
+\begin_inset VSpace medskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Nous filons, désormais, à coups de pagaies lents et puissants, au travers
+ de paysages bien différents de ceux des gorges de la Loire, nous laissant
+ aller à la poésie...
+\end_layout
+
+\begin_layout Quotation
+
+\shape italic
+\size small
+Trois fois 
+\begin_inset Quotes fld
+\end_inset
+
+glou
+\begin_inset Quotes frd
+\end_inset
+
+, à travers buses et vieille plomberie, la rivière Loire prend source au
+ mont Gerbier\SpecialChar \nobreakdash-
+de\SpecialChar \nobreakdash-
+Jonc, banal tas de cailloux.
+ En Ardèche, les montagnes suintent et les rivières naissent.
+\end_layout
+
+\begin_layout Quotation
+
+\shape italic
+\size small
+La voilà qu'elle cavale, entre les rochers et à travers champs, vite rejointe
+ par son premier affluent, l'Aigue\SpecialChar \nobreakdash-
+Nègre.
+ Elle grossit, la Loire, au rythme de ces suintements.
+ Elle grossit et elle file, pas toujours douce avec les hommes et les kayakistes.
+ Elle se creuse un chemin à travers des gorges, qu'elle creuse à son tour.
+ Joli ballet.
+\end_layout
+
+\begin_layout Quotation
+
+\shape italic
+\size small
+Dévale, dévale, Loire...
+ Passe le Puy\SpecialChar \nobreakdash-
+en\SpecialChar \nobreakdash-
+Velay, prends tes chemins et descends les contreforts de
+ ce Massif central.
+ Passe, Loire, avec dédain, ces maudits barrages dont les hommes t'ont déguisée.
+ Passe Roanne et nourris son fade canal.
+\end_layout
+
+\begin_layout Quotation
+
+\shape italic
+\size small
+Enfin, repose toi, Loire, comme nous, sur ces immensités de sable et de
+ cailloux fins.
+ Et va à la rêverie, chatouillée par mille oiseaux.
+ 
+\end_layout
+
+\begin_layout Standard
+Tous les contrastes de la Loire se trouvent là, en fin de compte : des hauteurs
+ aux plaines ; des gorges aux champs de sable ; du bouillonnement à la sérénité
+ ; de la rivière au fleuve.
+ Avec quelques constantes cependant : le héron cendré, le canard colvert
+ et une anthropisation débordante, écœurante.
+\end_layout
+
+\begin_layout Standard
+Poésie à part, voici, plus pragmatique, notre Loire.
+ De Roanne à Digoin, on finit de descendre le Massif central par le nord,
+ et on s'extasie à la vue de superbes et nombreux oiseaux.
+ Les paysages sont grands et respirent.
+ Ils sont faits de longues masses d'arbres et de plages d'un jaune très
+ clair.
+ La Loire est basse et nos pieds souvent dans le sable.
+ On en vient presque à y croire, oui, que ce fleuve est sauvage.
+ Après Digoin et jusqu'à Blois, les panoramas s'étriquent un peu, mais restent
+ largement ouverts.
+ La présence humaine se fait plus dense.
+ Villes, champs, ponts, routes...
+ fleurissent et étouffent la Loire, autant que la renoncule des rivières,
+ plante envahissante, au parfum néanmoins doux et agréable.
+ Ces villes ont un beau patrimoine et méritent – tout de même – de larges
+ détours, pour ceux qui aiment l'histoire et les bistrots.
+\end_layout
+
+\begin_layout Standard
+Et nous ? Après Roanne, nous nous sommes apaisés, s'essayant à être un peu
+ hippies.
+ Nous mangeons avec appétit ce voyage, nous nourrissant de tout ce qu'il
+ dégage.
+ Mais nous buvons peu, il ne pleut pas.
+ Et faute de nuages, nous bronzons.
+ Pour deux blancs bretons, c'est cocasse et à la longue à peine douloureux.
+ Surtout, nous jouissons, avec un subtil plaisir, de l'alternance suivante.
+ Souvent plongés en profonde nature, nous méditons sur la paix, l'amour,
+ le voyage et contre les hommes.
+ Mais, parfois, nous accostons au creux de cette même humanité, qui nous
+ accueille, chaleureuse.
+ Alors, nous nous gorgeons de rencontres, de paroles échangées, de cafés
+ bus à la terrasse d'un troquet, et de BD lues dans une bibliothèque.
+ Nous aimons cette contradiction ; elle nous fait sourire et avancer ; et
+ voguant à ses côtés, nous la comprenons.
+\end_layout
+
+\begin_layout Standard
+À dix kilomètres avant Amboise, sur une plage de sable fin, entre un pêcheur
+ taquinant le goujon et un castor rongeant les branches, nous voilà assis,
+ au repos, méditant, encore.
+ Nous sommes le 12
+\begin_inset space ~
+\end_inset
+
+mai
+\begin_inset space ~
+\end_inset
+
+2011 ; un jeudi.
+ Demain, vendredi
+\begin_inset space ~
+\end_inset
+
+13 : rien à espérer, nous sommes heureux et maîtres de nos destins.
+\end_layout
+
 \end_body
 \end_document
