Add the text : Filent, l'eau, le sable, la vie.

--- a/main.lyx
+++ b/main.lyx
@@ -1484,5 +1484,60 @@ mai
 13 : rien à espérer, nous sommes heureux et maîtres de nos destins.
 \end_layout
 
+\begin_layout Section*
+Filent l'eau, le sable, la vie.
+\end_layout
+
+\begin_layout Standard
+Un mois que nous sommes à bourlinguer, à suivre le cours de ce beau fleuve
+ Loire.
+ Que nous en avons eu des remous et bancs de sable, nous ralentissant excessivem
+ent ! Nous voilà, maintenant, sur une partie aisément navigable, à l'exception
+ de quelques passages délicats.
+ Et nous filons.
+\end_layout
+
+\begin_layout Standard
+Je regarde, avec recul, la carte du parcours et deux sentiments s'affrontent
+ en moi (qui a dit 
+\begin_inset Quotes fld
+\end_inset
+
+schizophrène
+\begin_inset Quotes frd
+\end_inset
+
+ ?).
+ Le premier est la volonté d'avancer : pour voir ce trait bleu grandir encore
+ ; découvrir ces villes au nom familier, puisque longuement étudiées pendant
+ la préparation ; enfin, arriver dans notre région et nous dire « On l'a
+ fait ! » Le second sentiment est l'envie de lenteur ; comme si, au fur
+ et à mesure que ce trait grandissait, le voyage s'enfuyait.
+\end_layout
+
+\begin_layout Standard
+L'aventure « Loire » se terminera dans un mois, s'ouvrant sur une autre.
+ Aurai-je assez profité de ces journées à pagayer ? Me serai-je assez ouverte
+ aux milieux qui m'entourent ? J'essaie, au maximum, de ne rien gâcher de
+ ce périple.
+ Mais, en rentrant, j'aurai l'inévitable sensation d'en avoir manqué un
+ bout.
+\end_layout
+
+\begin_layout Standard
+Dans une vie sédentaire, comme dans une de voyage, prend-on suffisamment
+ les moments, bons comme mauvais ? J'ai cette sensation latente que la vie,
+ comme le sable, nous file toujours entre les doigts.
+ Alors, 
+\emph on
+carpe
+\begin_inset space ~
+\end_inset
+
+diem
+\emph default
+.
+\end_layout
+
 \end_body
 \end_document
