Add the text : Le phoque et le pont

--- a/main.lyx
+++ b/main.lyx
@@ -506,10 +506,17 @@ Le mont Gerbier-de-Jonc
 \end_layout
 
 \begin_layout Standard
-« La Loire prend sa source au mont Gerbier\SpecialChar \nobreakdash-
+\begin_inset Quotes fld
+\end_inset
+
+La Loire prend sa source au mont Gerbier\SpecialChar \nobreakdash-
 de\SpecialChar \nobreakdash-
-Jonc », phrase typique des écoles
- de nos grands-parents, de nos parents et, peut-être, de nous aussi.
+Jonc
+\begin_inset Quotes frd
+\end_inset
+
+, phrase typique des écoles de nos grands-parents, de nos parents et, peut-être,
+ de nous aussi.
  La source de la Loire, il y en a trois officielles.
  Mais en réalité, des suintements et des ruisseaux coulent de tous les sucs
  alentours, se rejoignant pour former une toute petite Loire.
@@ -521,7 +528,15 @@ Nous y sommes allés à ce fameux mont.
  faisant un détour, pour voir ce tas de cailloux.
  Le lieu m'a laissé un arrière goût touristique en bouche, m'enlevant la
  symbolique du moment.
- Pourtant, n'étant qu'en avril, il n'y avait pas « grand monde ».
+ Pourtant, n'étant qu'en avril, il n'y avait pas 
+\begin_inset Quotes fld
+\end_inset
+
+grand monde
+\begin_inset Quotes frd
+\end_inset
+
+.
  Mais l'été, d'après un cycliste habitué, le défilé ininterrompu des touristes
  s'étale de 10
 \begin_inset space \thinspace{}
@@ -541,7 +556,15 @@ h.
 \end_layout
 
 \begin_layout Standard
-Je n'ai pas grimpé le « Gerbier ».
+Je n'ai pas grimpé le 
+\begin_inset Quotes fld
+\end_inset
+
+Gerbier
+\begin_inset Quotes frd
+\end_inset
+
+.
  Et même si je n'y retournerais probablement jamais, c'est sans regret !
 \end_layout
 
@@ -1049,9 +1072,16 @@ Ce midi, un homme généreux, rencontré le matin même, nous a invité au resta
  et blancs immaculés.
  Je me suis régalée, mais ne me suis pas sentie à l'aise.
  Pour moi, le repas est un moment convivial qui se transforme, ici, en un
- moment protocolaire : seul le « chef de table » a les prix ; le pain est
- servi au compte goutte ; les noms des plats et les manières des serveurs
- sont alambiqués...
+ moment protocolaire : seul le 
+\begin_inset Quotes fld
+\end_inset
+
+chef de table
+\begin_inset Quotes frd
+\end_inset
+
+ a les prix ; le pain est servi au compte goutte ; les noms des plats et
+ les manières des serveurs sont alambiqués...
 \end_layout
 
 \begin_layout Standard
@@ -1485,7 +1515,7 @@ mai
 \end_layout
 
 \begin_layout Section*
-Filent l'eau, le sable, la vie.
+Filent l'eau, le sable, la vie
 \end_layout
 
 \begin_layout Standard
@@ -1510,13 +1540,28 @@ schizophrène
  ?).
  Le premier est la volonté d'avancer : pour voir ce trait bleu grandir encore
  ; découvrir ces villes au nom familier, puisque longuement étudiées pendant
- la préparation ; enfin, arriver dans notre région et nous dire « On l'a
- fait ! » Le second sentiment est l'envie de lenteur ; comme si, au fur
- et à mesure que ce trait grandissait, le voyage s'enfuyait.
+ la préparation ; enfin, arriver dans notre région et nous dire 
+\begin_inset Quotes fld
+\end_inset
+
+On l'a fait !
+\begin_inset Quotes frd
+\end_inset
+
+ Le second sentiment est l'envie de lenteur ; comme si, au fur et à mesure
+ que ce trait grandissait, le voyage s'enfuyait.
 \end_layout
 
 \begin_layout Standard
-L'aventure « Loire » se terminera dans un mois, s'ouvrant sur une autre.
+L'aventure 
+\begin_inset Quotes fld
+\end_inset
+
+Loire
+\begin_inset Quotes frd
+\end_inset
+
+ se terminera dans un mois, s'ouvrant sur une autre.
  Aurai-je assez profité de ces journées à pagayer ? Me serai-je assez ouverte
  aux milieux qui m'entourent ? J'essaie, au maximum, de ne rien gâcher de
  ce périple.
@@ -1537,6 +1582,193 @@ carpe
 diem
 \emph default
 .
+\end_layout
+
+\begin_layout Chapter*
+Chapitre 4
+\end_layout
+
+\begin_layout Section*
+Le phoque et le pont
+\end_layout
+
+\begin_layout Standard
+Tout ça, c'est une histoire de tracas, en fin de compte.
+ Les tracas que nous causent les vieux ponts de Loire.
+ Il y a eu ceux de Veauche, Digoin, Nevers, Orléans, Beaugency, Blois et
+ Amboise.
+ Leurs attraits : la beauté de leur vieillesse et, parfois, quelques chouettes
+ remous sportifs.
+ Leurs constantes de malheur : de grosses pierres pas commodes, sous leurs
+ piliers et leurs arches ; des bouts de bois et de ferrailles ; des plaques
+ dentées métalliques ; etc.
+ La plaie des kayakistes et canoéistes.
+\end_layout
+
+\begin_layout Standard
+Hier, nous fûmes, de nouveau, face à l'un de ces vieux ponts.
+ Le plus redouté, le plus sale, le plus dangereux probablement.
+ Le pont Wilson de Tours.
+ Nous le toisâmes longtemps, timidement, peureux des histoires que nous
+ avions lu à son sujet.
+ Le parcourant de long en large, nous y cherchâmes une issue : la moins
+ crispante pour nous, la moins douloureuse pour notre embarcation.
+ Nous avions convenu – tout de même – que, en toute sérénité, nous ferions
+ un portage à cet endroit, à ce Wilson trop dangereux pour notre coque de
+ bois.
+ Mais moi, mué par un vilain orgueil, j'imaginai tout de même la passer,
+ cette terreur.
+\end_layout
+
+\begin_layout Quotation
+\begin_inset Quotes fld
+\end_inset
+
+Marie, dis-je, là-bas sous la quatrième arche, il y a des gros blocs, des
+ gros remous, ça a l'air dur et sportif, mais ça passe ! Non ?
+\end_layout
+
+\begin_layout Quotation
+--- Non, qu'elle trancha.
+\end_layout
+
+\begin_layout Quotation
+--- Hum.
+ D'accord.
+\begin_inset Quotes frd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Finalement, la raison l'emporta.
+ Au lieu de franchir cet emmerdement en 10
+\begin_inset space ~
+\end_inset
+
+secondes et en prenant tous les risques, nous le franchîmes en 30
+\begin_inset space ~
+\end_inset
+
+minutes de pleine sécurité ; moi, un peu piqué dans mon orgueil de 
+\begin_inset Quotes fld
+\end_inset
+
+guerrier
+\begin_inset Quotes frd
+\end_inset
+
+.
+ Ce genre de vieux pont est générateur de stress.
+ Le Wilson nous stressa sacrément, le fumier !
+\end_layout
+
+\begin_layout Standard
+Le pont passé, nous continuâmes notre chemin, cahin-caha, entre eaux et
+ bancs de sable.
+ Puis apparut – comme prévu sur notre carnet de route – un second vieux
+ pont, doublé d'un autre (récent).
+ À priori, pas d'ennui ici.
+ Mais l'autre con de Wilson, là-bas, nous avait ramolli.
+ Et nous voici, encore une fois, longeant un foutu pont sur toute sa longueur,
+ cherchant une issue tranquille.
+ Bof.
+ Dans la mollesse d'esprit du moment, rien de convenable.
+\end_layout
+
+\begin_layout Standard
+C'est alors qu'une famille de canards colvert passa sous une arche proche,
+ nous montrant le chemin.
+ Usant d'un vif esprit d'analyse, je dis : 
+\begin_inset Quotes fld
+\end_inset
+
+Si la famille canard passe, on passe !
+\begin_inset Quotes frd
+\end_inset
+
+ Hardis, nous nous jetâmes dans le courant de l'arche à anatidés, pagayant
+ fort.
+ Les premiers remous arrivèrent.
+ Les premières vagues s'engouffrèrent sous la jupe de notre kayak (les coquines).
+ Pagayer, pagayer le cœur battant, à chaque fois dans ces obstacles.
+ 
+\begin_inset Quotes fld
+\end_inset
+
+Ça passe, que c'était bon !
+\begin_inset Quotes frd
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+À la sortie de l'arche, entre les deux ponts quasiment collés, l'embarcation
+ freina et nos esprits se bloquèrent nets.
+ À bâbord, à un mètre seulement, une tête sortait à demi de l'eau.
+ Une tête grosse ; grise ; sans poil apparent, sauf trois petits sur le
+ dessus du crâne, comme sur un dessin d'enfant ; une jolie moustache de
+ chat ; et puis, fixés sur nous, deux très grands yeux noirs, presque tristes,
+ implorants.
+ Un phoque ? Oui, un phoque !
+\end_layout
+
+\begin_layout Standard
+Aussi fou que cela paraisse, il y a bel et bien un(des) jeune(s) phoque(s)
+ s'aventurant dans les terres, loin de l'estuaire.
+ L'an passé, un de ces phoques 
+\begin_inset Quotes fld
+\end_inset
+
+veau de mer
+\begin_inset Quotes frd
+\end_inset
+
+ aurait été aperçu à la Charité\SpecialChar \nobreakdash-
+sur\SpecialChar \nobreakdash-
+Loire.
+ Ça fait loin ! Cette année, il s'est montré à Bouchemaine, près d'Angers.
+ Le voilà, une semaine plus tard, aux portes de Tours, sous nos yeux hagards
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Un grand merci à ma maman, Monique : pour ses recherches 
+\begin_inset Quotes fld
+\end_inset
+
+internet
+\begin_inset Quotes frd
+\end_inset
+
+ à distance ; et pour avoir découvert, dans 
+\emph on
+Ouest-France
+\emph default
+, un article sur cette apparition.
+ Sans cela, elle nous aurait pris pour deux fous ; et nous serions persuadés,
+ alors, d'avoir vu une loutre.
+\end_layout
+
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+Le tête-à-tête dura dix secondes, un peu plus, un peu moins.
+ Un premier petit mouvement de pagaie : la bête remua.
+ Un second : elle passa sous l'eau.
+ La voilà partie.
+ Quel choc ! Nous restâmes alors hébétés de longues minutes, avançant à
+ faibles coups de rames, nous retournant sans cesse, priant pour revoir
+ cette merveille.
+ Puis nous repartîmes, lentement.
+ Mais alors, à vingt ou cinquante mètres devant nous, la demi-tête émergea
+ quelques secondes, comme un adieu.
+ Et hop, la voilà repartie, plongeant dans les étincelles du soleil couchant.
 \end_layout
 
 \end_body
